--- a/index.html
+++ b/index.html
@@ -2,13 +2,31 @@
 <html lang="en">
   <head>
     <title>Calculator</title>
-    <!-- <script src="js/scripts.js"></script> -->
+    <meta charset="UTF-8">
+    <script src="js/jquery-3.5.0.js"></script>
+    <script src="js/scripts.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
 
   </head>
   <body>
-    <h1>Calculator</h1>
-    <script src="js/scripts.js"></script>
+    <div class="container">
+      <h1>Calculator</h1>
+      <form id="add">
+        <div class="form-group">
+          <label for="add1">Number 1:</label>
+          <input type="text" id="add1" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="add2">Number 2:</label>
+          <input type="text" id="add2" class="form-control">
+        </div>
+        <div class="form-group">
+          <!-- <input type="button" value="Add!">  HOW DOES THIS INPUT WORK WITH FORMS?? CAN"T GET IT TO SUBMIT FORM YET-->
+          <button type="submit" class="btn">Add!</button>
+        </div>
+      </form>
+    </div>
 
   </body>
 </html>
